--- a/Semana1-RedesNeronales/1-mi-primera-nn.ipynb
+++ b/Semana1-RedesNeronales/1-mi-primera-nn.ipynb
@@ -69,9 +69,9 @@
     "def Prediccion(x,w):\n",
     "    y = 0\n",
     "    prob = Sigmoid(np.dot(x,w))\n",
-    "    if (prob >= 0):\n",
+    "    if (prob >= 0.5):\n",
     "        y = 1\n",
-    "    return y\n",
+    "    return [prob,y]\n",
     "    \n",
     "# Ejecucion de predicion {1,0}\n",
     "\n",
