--- a/Semana1-RedesNeronales/1-mi-primera-nn.ipynb
+++ b/Semana1-RedesNeronales/1-mi-primera-nn.ipynb
@@ -49,9 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor [1 OR 0] es: [0.9999999999999065, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
