--- a/Semana1-RedesNeronales/5-backpropagation-error.ipynb
+++ b/Semana1-RedesNeronales/5-backpropagation-error.ipynb
@@ -42,9 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.8]\n",
+      " [0.5]]\n",
+      "\n",
+      "[[2. 1.]\n",
+      " [3. 4.]]\n",
+      "\n",
+      "Error Layer 2\n",
+      "[[2.1]\n",
+      " [4.4]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -57,7 +74,7 @@
     "# pesos hidden layer 2\n",
     "wh2 = np.array([[2.0,1.0],[3.0, 4.0]])\n",
     "               \n",
-    "print(wh)\n",
+    "print(wh2)\n",
     "print(\"\")\n",
     "\n",
     "print(\"Error Layer 2\")\n",
@@ -68,9 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error Layer 1\n",
+      "[[10.7]\n",
+      " [35. ]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# pesos hidden layer 1\n",
     "wh1 = np.array([[3.0,1.0],[2.0, 7.0]])\n",
@@ -80,6 +108,13 @@
     "print(e_L1)\n",
     "print(\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
