--- a/Semana1-RedesNeronales/3-foward-propagation-a.ipynb
+++ b/Semana1-RedesNeronales/3-foward-propagation-a.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +53,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrada x\n",
+      "[[1. ]\n",
+      " [0.5]]\n",
+      "\n",
+      "Pesos w\n",
+      "[[0.9 0.3]\n",
+      " [0.2 0.8]]\n",
+      "\n",
+      "z:\n",
+      "[[1.05]\n",
+      " [0.6 ]]\n",
+      "\n",
+      "salida:\n",
+      "[[0.7407749 ]\n",
+      " [0.64565631]]\n"
+     ]
+    }
+   ],
    "source": [
     "# funcion Sigmoid\n",
     "def sig(x):\n",
@@ -96,9 +118,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "salida:\n",
+      "[[0.7407749 ]\n",
+      " [0.64565631]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Entradas y pesos:\n",
     "x = np.array([[1,0.5]]).T\n",
@@ -111,6 +143,13 @@
     "print(\"salida:\")\n",
     "print(o)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
