--- a/Semana1-RedesNeronales/4-forward-propagation-b.ipynb
+++ b/Semana1-RedesNeronales/4-forward-propagation-b.ipynb
@@ -11,9 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salida Layer 2:\n",
+      "[[0.76133271]\n",
+      " [0.60348325]\n",
+      " [0.65021855]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -35,9 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.72630335]\n",
+      " [0.70859807]\n",
+      " [0.77809706]]\n"
+     ]
+    }
+   ],
    "source": [
     "wb = np.array([[0.3,0.7,0.5],[0.6, 0.5, 0.2],[0.8,0.1,0.9]])\n",
     "\n",
@@ -56,9 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.72630335]\n",
+      " [0.70859807]\n",
+      " [0.77809706]]\n"
+     ]
+    }
+   ],
    "source": [
     "# datos de entrada\n",
     "x = np.array([[0.9,0.1, 0.8]]).T\n",
@@ -73,6 +104,13 @@
     "# imprimir salida\n",
     "print(output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
