se agregan imagenes para mostar pasos de alg. optimizacion

--- a/Semana2-RedesNeuronales-Adicional/4-algoritmos-optimizacion-keras.ipynb
+++ b/Semana2-RedesNeuronales-Adicional/4-algoritmos-optimizacion-keras.ipynb
@@ -81,9 +81,9 @@
     "La optimización de Adam es un método de descenso de gradiente estocástico que se basa en la estimación adaptativa de momentos de primer y segundo orden.\n",
     "\n",
     "- learning_rate (Default 0.001.)\n",
-    "- beta_1 (Default  0.9)\n",
-    "- beta_2 (Default  0.999)\n",
-    "- epsilon (Default 1e-7)\n",
+    "- beta_1 (Default  0.9) exponential decay rate\n",
+    "- beta_2 (Default  0.999) exponential decay rate\n",
+    "- epsilon (Default 1e-7) constante para evitar division por cero\n",
     "\n",
     "V:\n",
     "\n",
@@ -114,7 +114,9 @@
     "\n",
     "### Benchmark de Convergencia\n",
     "\n",
-    "<img src=\"img/opt1.gif\" />"
+    "<img src=\"img/opt1.gif\" />\n",
+    "\n",
+    "<img src=\"img/fnlevels.png\" />"
    ]
   },
   {
