Semana 3 intro a CNN

--- a/Semana2-RedesNeuronales-Adicional/3-nn-emociones-datagen-disco.ipynb
+++ b/Semana2-RedesNeuronales-Adicional/3-nn-emociones-datagen-disco.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 911 images belonging to 7 classes.\n",
+      "Found 70 images belonging to 7 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "ENTRENAMIENTO_DIR = \"data/CK/\"\n",
     "PRUEBAS_DIR = \"data/CK_PRUEBAS/\"\n",
@@ -77,9 +86,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\XPC\\anaconda3\\envs\\py36\\lib\\site-packages\\tensorflow\\python\\ops\\init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "flatten (Flatten)            (None, 6912)              0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization (BatchNo (None, 6912)              27648     \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 2048)              14157824  \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 2048)              8192      \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1024)              2098176   \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_2 (Batch (None, 1024)              4096      \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 200)               205000    \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 7)                 1407      \n",
+      "=================================================================\n",
+      "Total params: 16,502,343\n",
+      "Trainable params: 16,482,375\n",
+      "Non-trainable params: 19,968\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "modelo = keras.Sequential(\n",
     "    [\n",
