--- a/Semana2-RedesNeuronales-Adicional/6-nn-regresion-auto-mpg.ipynb
+++ b/Semana2-RedesNeuronales-Adicional/6-nn-regresion-auto-mpg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from http://archive.ics.uci.edu/ml/machine-learning-databases/auto-mpg/auto-mpg.data\n",
-      "32768/30286 [================================] - 0s 5us/step\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "'C:\\\\Users\\\\XPC\\\\.keras\\\\datasets\\\\auto-mpg.data'"
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +160,7 @@
        "397          82       1  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +309,7 @@
        "397          82  1.0     0.0    0.0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,22 +378,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "WARNING:tensorflow:From C:\\Users\\XPC\\anaconda3\\envs\\py36\\lib\\site-packages\\tensorflow\\python\\ops\\init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_16 (Dense)             (None, 64)                640       \n",
+      "dense (Dense)                (None, 64)                640       \n",
       "_________________________________________________________________\n",
-      "dense_17 (Dense)             (None, 64)                4160      \n",
+      "dense_1 (Dense)              (None, 64)                4160      \n",
       "_________________________________________________________________\n",
-      "dense_18 (Dense)             (None, 1)                 65        \n",
+      "dense_2 (Dense)              (None, 1)                 65        \n",
       "=================================================================\n",
       "Total params: 4,865\n",
       "Trainable params: 4,865\n",
@@ -441,18 +436,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Epoch 0 completed"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imprime el progreso (Keras Callback)\n",
     "class PrintDot(keras.callbacks.Callback):\n",
